# PingPongGame

./: CMakeLists.txt  CMakeSettings.json  README.md
PingPongGame/: PingPongGame.cpp  PingPongGame.h  game.cpp  platform_common.hpp  render.cpp  utils.cpp  utils.hpp  win32_platform.cpp  win32_platform.h  win32_platform.hpp
